--- a/Data/svar_settings.jsonc
+++ b/Data/svar_settings.jsonc
@@ -105,7 +105,7 @@
     },
     "Haell": {
         "priority": 999,
-        "Season": {
+        "Fall": {
             "temp_dice": "2d10",
             "temp_base": 32,
             "water_dice": "1d20",
@@ -125,7 +125,7 @@
                 "100": "High Wind"
             }
         },
-        "Season2": {
+        "Spring": {
             "temp_dice": "2d10",
             "temp_base": 32,
             "water_dice": "1d20",
